--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "workshop-threejs-starter",
-  "version": "0.0.1",
-  "description": "THREE.js Starter Kit for Creative Coding Workshop for CRMA 2015",
+  "name": "threejs-starter",
+  "version": "0.0.2",
+  "description": "THREE.js Starter Kit",
   "main": "src/js/main.js",
   "dependencies": {
   },
@@ -12,6 +12,6 @@
     "gulp-uglify": "~1.0.1",
     "gulp-watch": "^1.1.0"
   },
-  "author": "Guillaume Gouessan",
+  "author": "Guillaume Gouessan, Valentin Daguenet",
   "license": "BSD-2-Clause"
 }
