--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,8 @@
   ],
   "devDependencies": {
     "greensock": "~1.14.1",
-    "jquery": "~2.1.1",
     "threejs": "*",
-    "dat-gui": "~0.5.0"
+    "dat-gui": "~0.5.0",
+    "stats.js": "*"
   }
 }
