--- a/package.json
+++ b/package.json
@@ -2,28 +2,30 @@
   "name": "threejs-starter",
   "version": "1.0.0",
   "description": "THREE.js Starter Kit",
-  "main": "build/main.js",
+  "main": "app/index.js",
   "scripts": {
-    "start": "npm run dev:script & npm run dev:server",
-    "dev:script": "watchify -t babelify app/index.js -o build/main.js",
-    "dev:server": "browser-sync start --server --files './' --port 3000 --no-ui",
-    "build": "browserify -t babelify -t stripify app/index.js | uglifyjs -o build/main.js"
+    "start": "npm run dev",
+    "dev": "budo app/index.js:build/main.js --dir ./public --live --open -- -t babelify -g glslify",
+    "build": "browserify -t babelify -t stripify -g glslify app/index.js | uglifyjs -o public/build/main.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:vdaguenet/threejs-starter-kit.git"
   },
   "author": "Valentin Daguenet <valentin.daguenet@gmail.com> (http://vdaguenet.fr)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "dat-gui": "^0.5.0",
-    "domready": "^1.0.8",
-    "gsap": "^1.17.0",
-    "raf": "^3.0.0",
-    "three": "^0.71.0"
+    "dat-gui": "*",
+    "gsap": "*",
+    "raf": "*",
+    "three": "*"
   },
   "devDependencies": {
-    "babelify": "^6.1.2",
-    "browser-sync": "^2.7.5",
-    "browserify": "^10.2.1",
-    "stripify": "^3.0.0",
-    "uglifyjs": "^2.4.10",
-    "watchify": "^3.2.1"
+    "babelify": "*",
+    "browserify": "*",
+    "budo": "*",
+    "glslify": "*",
+    "stripify": "*",
+    "uglifyjs": "*"
   }
 }
